--- a/support/refc/Makefile
+++ b/support/refc/Makefile
@@ -44,4 +44,4 @@ cleandep: clean
 
 install: build
 	mkdir -p ${PREFIX}/idris2-${IDRIS2_VERSION}/refc
-	install $(LIBTARGET) *.h ${PREFIX}/idris2-${IDRIS2_VERSION}/refc
+	install -m 644 $(LIBTARGET) *.h ${PREFIX}/idris2-${IDRIS2_VERSION}/refc
