[ ci ] ignore Release/ for idris2 builds

--- a/.github/workflows/ci-idris2.yml
+++ b/.github/workflows/ci-idris2.yml
@@ -9,6 +9,7 @@ on:
     paths-ignore:
       - 'docs/**'
       - 'icons/**'
+      - 'Release/**'
       - '*.md'
       - 'CONTRIBUTORS'
       - 'LICENSE'
