Make RefC search for files in data dirs
Previously, the RefC files were located in IDRIS2_PREFIX. This is
decoupled to allow users to change the prefix (for ad-hoc library
install locations, for example).

--- a/support/c/Makefile
+++ b/support/c/Makefile
@@ -54,7 +54,7 @@ cleandep: clean
 
 install: build
 	mkdir -p ${PREFIX}/idris2-${IDRIS2_VERSION}/lib
-	mkdir -p ${PREFIX}/idris2-${IDRIS2_VERSION}/include
+	mkdir -p ${PREFIX}/idris2-${IDRIS2_VERSION}/support/c
 	install -m 755 $(DYLIBTARGET) ${PREFIX}/idris2-${IDRIS2_VERSION}/lib
 	install -m 644 $(LIBTARGET)   ${PREFIX}/idris2-${IDRIS2_VERSION}/lib
-	install -m 644 *.h            ${PREFIX}/idris2-${IDRIS2_VERSION}/include
+	install -m 644 *.h            ${PREFIX}/idris2-${IDRIS2_VERSION}/support/c
