--- a/.github/workflows/ci-idris2.yml
+++ b/.github/workflows/ci-idris2.yml
@@ -301,7 +301,7 @@ jobs:
       - name: Build self-hosted
         run: make all IDRIS2_BOOT="idris2 -Werror" && make install
       - name: Test self-hosted
-        run: make test INTERACTIVE=''
+        run: make ci-ubuntu-test INTERACTIVE=''
 
   macos-self-host-chez:
     needs: macos-bootstrap-chez
@@ -326,7 +326,7 @@ jobs:
         run: make all IDRIS2_BOOT="idris2 -Werror" && make install
         shell: bash
       - name: Test self-hosted
-        run: make test INTERACTIVE=''
+        run: make ci-macos-test INTERACTIVE=''
         shell: bash
 
   # RACKET
@@ -353,7 +353,7 @@ jobs:
       - name: Build self-hosted
         run: make all IDRIS2_BOOT="idris2 -Werror" && make install
       - name: Test self-hosted
-        run: make test INTERACTIVE=''
+        run: make ci-ubuntu-test INTERACTIVE=''
 
   ubuntu-self-host-previous-version:
     needs: quick-check
@@ -381,7 +381,7 @@ jobs:
       - name: Build self-hosted from previous version
         run: make all IDRIS2_BOOT="idris2 -Werror" && make install
       - name: Test self-hosted from previous version
-        run: make test INTERACTIVE=''
+        run: make ci-ubuntu-test INTERACTIVE=''
       - name: Artifact Idris2
         uses: actions/upload-artifact@v2
         with:
@@ -440,7 +440,7 @@ jobs:
           c:\msys64\usr\bin\bash -l -c "cd $env:PWD && make"
       # TODO: fix the broken tests!
       # - name: Test
-      #  run: c:\msys64\usr\bin\bash -l -c "cd $env:PWD && make test"
+      #  run: c:\msys64\usr\bin\bash -l -c "cd $env:PWD && make ci-windows-test"
       - name: Install
         run: c:\msys64\usr\bin\bash -l -c "cd $env:PWD && make install"
 
