--- a/.github/workflows/ci-idris2.yml
+++ b/.github/workflows/ci-idris2.yml
@@ -241,7 +241,10 @@ jobs:
     - uses: cachix/install-nix-action@v12
       with:
         install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210126_f15f0b8/install
-    - run: nix-build -A checks.x86_64-linux
+    - name: Test with nix
+      env:
+        NIX_CONFIG: "experimental-features = nix-command flakes"
+      run: nix build .#checks.x86_64-linux.idris2Tests -L
 
   # RACKET
 
